fixed some spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -9,9 +9,9 @@ body {
 }
 .container {
     /* max-width: 900px; */
-    max-width: 80%;
-    margin: 40px auto;
-    padding: 20px;
+    max-width: 75%;
+    margin: 20px auto;
+    padding: 10px;
 }
 h1 {
     font-family: 'Helvetica', sans-serif;
@@ -24,15 +24,16 @@ h3{
     font-weight: lighter;
 }
 .image-container {
-    margin-top: 20px;
+    /* margin-top: 20px; */
     border-radius: 10px;
-    overflow: hidden;
+    overflow: invisible;
 }
 img {
     width: 100%;
     height: auto;
     border-radius: 8px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    margin: 1%;
+    /* box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); */
 }
 .caption {
     margin-top: 15px;
